<?xml version="1.0"?>
<package>
  <name>serial</name>
  <version>1.2.1</version>
  <description>
    Serial is a cross-platform, simple to use library for using serial ports on computers.
    This library provides a C++, object oriented interface for interacting with RS-232
    like devices on Linux and Windows.
  </description>

  <maintainer email="yovoy@outlook.sa">Youcef Maifi</maintainer>

  <license>MIT</license>

  <url type="repository">https://github.com/Youcef-Maifi/serial</url>

  <author email="yovoy@outlook.sa">Youcef Maifi</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>boost</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
